--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Bem Vindo a</div>
-                <div class="text-2">Minha Pagina</div>
+                <div class="text-1">Bem Vindo ao</div>
+                <div class="text-2">Meu Site</div>
                 <div class="text-3">Especialistas em <span class="typing"></span> </div>
                 <a href="#"><i class="fab fa-whatsapp"></i>  entre em contacto</a>
             </div>
@@ -54,14 +54,14 @@
    <!-- About Section-->
    <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">Sobre Nós</h2> 
+            <h2 class="title">Sobre Mim</h2> 
             <div class="about-content">
                 <div class="column left">
                     <img src="imagens/ft.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Sobre a <span >HM</span></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, doloremque voluptatum? Incidunt, hic tempore dolorem natus nobis rerum fuga, similique fugiat, numquam reiciendis quas id impedit libero fugit! Ea magni assumenda velit repudiandae blanditiis veniam autem perspiciatis modi quos, iure at, iusto voluptates beatae nobis suscipit officia laborum eum quia ipsam eaque enim natus. Quis sapiente impedit blanditiis et quos!</p>
+                    <div class="text">Sobre <span >HM</span></div>
+                    <p>Engenheiro Informático, formado na Universidade Lúrio, focado na área de web design & graphic design, trabalha como freelancer. Gosta de desafios novos e sempre procura aprender novas coisas.</p>
                     <a href="#">Ver Mais</a>
                 </div>
             </div>
