alteracao do titulo da homepage

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Bem Vindo ao</div>
-                <div class="text-2">Meu Site</div>
+                <div class="text-2">Meu Website</div>
                 <div class="text-3">Especialistas em <span class="typing"></span> </div>
                 <a href="#"><i class="fab fa-whatsapp"></i>  entre em contacto</a>
             </div>
