alterando icones de servicos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Sobre <span >Helder</span> Milato</div>
-                    <p>Engenheiro Informático, formado na Universidade Lúrio, focado na área de web design & graphic design, trabalha como <span>freelancer</span> Gosta de desafios novos e sempre procura aprender novas coisas.</p>
+                    <p>Engenheiro Informático, formado na Universidade Lúrio, focado na área de web design & graphic design, trabalha como <span> Gosta de desafios novos e sempre procura aprender novas coisas.</p>
                     <a href="#">Ver Mais</a>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="card">
                     <div class="box">
                         
-                        <i class="fas fa-hard-hat"></i>
+                        <i class="fas fa-pen-nib"></i>
                         <div class="text">Design Gráfico</div>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis error cupiditate pariatur eveniet, consequatur magni.</p>
 
@@ -86,7 +86,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-drafting-compass"></i>
+                        <i class="fas fa-laptop-code"></i>
                         <div class="text">Desenvolvinento de Sistemas</div>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis error cupiditate pariatur eveniet, consequatur magni.</p>
 
@@ -95,7 +95,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-divide"></i>
+                        <i class="fas fa-video"></i>
                         <div class="text">Edição de vídeo  </div>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis error cupiditate pariatur eveniet, consequatur magni.</p>
 
