substituindo texto por foto

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         
                         <i class="fas fa-pen-nib"></i>
                         <div class="text">Design Gráfico</div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis error cupiditate pariatur eveniet, consequatur magni.</p>
+                        <p>Criação de logotipos, banners, flyers, capa de livros, revistas, e muitos mais</p>
 
                     </div>
                 </div>
@@ -87,8 +87,8 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-laptop-code"></i>
-                        <div class="text">Desenvolvinento de Sistemas</div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis error cupiditate pariatur eveniet, consequatur magni.</p>
+                        <div class="text">Desenvolvimento de Sistemas</div>
+                        <p>Desenvolvimento de sistemas webs, lojas virtuais, websites, sistemas desktops, aplicativos moveis</p>
 
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <div class="box">
                         <i class="fas fa-video"></i>
                         <div class="text">Edição de vídeo  </div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis error cupiditate pariatur eveniet, consequatur magni.</p>
+                        <p>Criação e edição de vídeos comerciais, entre outros </p>
 
                     </div>
                 </div>
@@ -112,9 +112,10 @@
             <h2 class="title">Minhas Habilidades</h2>
             <div class="skills-content">
                 <div class="column left">
+                    <img src="imagens/skil.svg" alt="" > <!--
                     <div class="text">Our creative skills & something</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, beatae iure doloribus commodi, nulla reiciendis vel impedit ipsa doloremque architecto quaerat laboriosam odio vero provident modi non nemo veritatis harum expedita necessitatibus molestias corporis. Exercitationem vero mollitia et consectetur vel impedit nemo illo voluptatem aspernatur, fuga sequi ab incidunt eaque? Eaque voluptatibus sint consectetur minima rem, quaerat eum voluptates ut?</p>
-                    <a href="#">Ler Mais</a>
+                <a href="#">Ler Mais</a>   -->  
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -276,9 +277,11 @@
             <h2 class="title">Contacte-nos</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div class="text">Entre em contacto</div>
+                    <img src="imagens/contac.svg" alt="" >
+                 <!----    <div class="text">Entre em contacto</div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis enim nam inventore numquam? Aperiam assumenda perspiciatis impedit omnis deleniti. Odit?</p>
-                    <div class="icons">
+                  
+                  <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i> 
                             <div class="info">
@@ -300,7 +303,7 @@
                                 <div class="sub-title">helder.milato@gmail.com</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="column right">
                     <div class="text">Envie-nos um email</div>
